# xTool

./: .cursorrules  .gitignore  README.md  ecosystem.config.js  electron-builder.yml  package-lock.json  package.json  tsconfig.base.json
.cursor/plans/: 20260327-chat-server-python-refactor-plan.md  20260331-chat-agent-orchestrator-plan.md  mcp_key模块_bed94cad.plan.md  xtool-mcp_http_mcp_3834081c.plan.md  聊天室与mcp扩展_bdf21034.plan.md  账号登录一周免登_7d59d2fe.plan.md
.cursor/rules/: 001-develop-config.mdc  plan-follow-skill.mdc
ai/RAG/backend/: main.py  milvus_demo.db  pyproject.toml  uvicorn_config.py
ai/RAG/backend/chroma_db/: chroma.sqlite3
ai/RAG/backend/files/: test.txt  text.md  text1.md
ai/RAG/backend/utils/: common.py  llm.py  tools.py  vectorDB.py
ai/langchainLearning/: .env  invoke.py  magicMethod.py  prompt.py  pyproject.toml  translator.py
ai/langchainRAG/: main.py  pyproject.toml
ai/py-cli-ai/: cli.py  main.py  pyproject.toml
chat-server/: .env.example  README.md  pyproject.toml  requirements.txt
chat-server/app/: app_factory.py  main.py
electron/: package.json  tsconfig.json
electron/src/: main.ts  preload.ts  types.d.ts
renderer/: fix-html-paths.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
renderer/src/: App.tsx
server/: .env  .env.example  .gitignore  README.md  package-lock.json  package.json
server/migrations/: add_theme_to_appsetting.sql
server/src/: index.js  index.ts
xtool-mcp/: .env  .env.example  README.md  package-lock.json  package.json  tsconfig.json
xtool-mcp/src/: config.ts  index.ts  (+4 more)
(+183 files in other folders)
