[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "markdown-chunker>=0.1.3",
    "openai>=2.33.0",
    "pymilvus[milvus-lite]>=2.6.12",
    "python-multipart>=0.0.27",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]
